added Managers & CRUD

--- a/DalWindow.xaml
+++ b/DalWindow.xaml
@@ -38,5 +38,30 @@
             </StackPanel>
         </ScrollViewer>
 
+        <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Column="1">
+            <StackPanel Orientation="Vertical">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Label HorizontalAlignment="Center" FontSize="22">Менеджеры</Label>
+                    <Button Padding="15 10" x:Name="createManagerBtn" Click="createManagerBtn_Click">+</Button>
+                </StackPanel>
+                <ListView ItemsSource="{Binding Managers}">
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Path=Name}" />
+                            <GridViewColumn Header="Surname" DisplayMemberBinding="{Binding Path=Surname}" />
+                            <GridViewColumn Header="MainDep" DisplayMemberBinding="{Binding Path=MainDep.Name}" />
+                            <GridViewColumn Header="SecDep" DisplayMemberBinding="{Binding Path=SecDep.Name}" />
+                            <GridViewColumn Header="Chief" DisplayMemberBinding="{Binding Path=ChiefName}" />
+                            <GridViewColumn Header="Subordinates" DisplayMemberBinding="{Binding Path=Subordinates.Count}" />
+                        </GridView>
+                    </ListView.View>
+                    <ListView.Resources>
+                        <Style TargetType="{x:Type ListViewItem}">
+                            <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_MouseDoubleClick_1" />
+                        </Style>
+                    </ListView.Resources>
+                </ListView>
+            </StackPanel>
+        </ScrollViewer>
     </Grid>
 </Window>
